Fix scrollbar height

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@ html {
 #row {
     overflow-x:auto;
     overflow-y: hidden;
-    max-height: 92vh;
 }
 
 #row::-webkit-scrollbar {
@@ -27,7 +26,7 @@ html {
 }
 
 .col-3 {
-    height: calc(92vh);
+    height: calc(91vh);
     overflow-y: scroll;
     overflow-x: hidden;
     scrollbar-width: thin;
@@ -36,7 +35,7 @@ html {
 
 @media screen and (max-height : 750px) {
     .col-3 {
-        height: calc(90vh);
+        height: calc(91vh);
     }
 }
 
